删除第三方库 乐视

--- a/QiHuangDJ/VIewController/Information/InfomationForHeader.xib
+++ b/QiHuangDJ/VIewController/Information/InfomationForHeader.xib
@@ -50,7 +50,7 @@
                 </label>
                 <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aRD-x3-K7h">
                     <rect key="frame" x="8" y="211" width="304" height="54"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="K3h-bf-XJv"/>
                     </constraints>
@@ -61,7 +61,6 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="y4S-sE-EIl" firstAttribute="top" secondItem="aRD-x3-K7h" secondAttribute="bottom" constant="8" id="0gM-Y8-m6p"/>
                 <constraint firstAttribute="trailing" secondItem="6EC-sC-gS3" secondAttribute="trailing" constant="8" id="6kb-x8-X03"/>
                 <constraint firstItem="aRD-x3-K7h" firstAttribute="top" secondItem="20D-TA-Ich" secondAttribute="bottom" constant="8" id="7YL-4C-GZ7"/>
                 <constraint firstItem="6EC-sC-gS3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="9C5-vY-XvM"/>
@@ -71,6 +70,7 @@
                 <constraint firstItem="20D-TA-Ich" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Pa2-9p-yUG"/>
                 <constraint firstItem="20D-TA-Ich" firstAttribute="top" secondItem="6EC-sC-gS3" secondAttribute="bottom" constant="8" id="QWe-su-6og"/>
                 <constraint firstAttribute="trailing" secondItem="WjX-Rm-pH6" secondAttribute="trailing" constant="8" id="QXH-J7-hz0"/>
+                <constraint firstItem="s5l-ip-z4V" firstAttribute="top" secondItem="y4S-sE-EIl" secondAttribute="bottom" constant="8" id="Rqx-ox-gi9"/>
                 <constraint firstItem="WjX-Rm-pH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="TPB-4S-vqY"/>
                 <constraint firstItem="6EC-sC-gS3" firstAttribute="top" secondItem="WjX-Rm-pH6" secondAttribute="bottom" constant="8" id="UuJ-Ga-kVe"/>
                 <constraint firstItem="aRD-x3-K7h" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="ZgK-LN-ghR"/>
@@ -88,10 +88,10 @@
                 <outlet property="commentLabel" destination="s5l-ip-z4V" id="LG1-0x-hoi"/>
                 <outlet property="photoImageView" destination="20D-TA-Ich" id="KNl-AG-Sys"/>
                 <outlet property="titleLabel" destination="WjX-Rm-pH6" id="Kwr-ul-eoO"/>
-                <outlet property="webViewHeight" destination="K3h-bf-XJv" id="5at-ek-aRq"/>
+                <outlet property="webViewHeight" destination="K3h-bf-XJv" id="0fg-E5-gLS"/>
                 <outlet property="webViewLaytou" destination="aRD-x3-K7h" id="hWB-HY-Keh"/>
             </connections>
-            <point key="canvasLocation" x="-254" y="207"/>
+            <point key="canvasLocation" x="-567" y="185"/>
         </view>
     </objects>
     <resources>
