--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
@@ -14,60 +14,60 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fenxiang_icon1.png" translatesAutoresizingMaskIntoConstraints="NO" id="J8c-Rz-xos">
-                        <rect key="frame" x="22" y="8" width="40" height="40"/>
+                        <rect key="frame" x="9" y="12" width="40" height="40"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="标题 标题 标题 标题 " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="156" translatesAutoresizingMaskIntoConstraints="NO" id="rwk-SJ-L8s">
-                        <rect key="frame" x="71" y="8" width="156" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="72" translatesAutoresizingMaskIntoConstraints="NO" id="Ta5-Le-gEx">
-                        <rect key="frame" x="245" y="8" width="72" height="21"/>
+                        <rect key="frame" x="254" y="10" width="67" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="content label" text="内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="236" translatesAutoresizingMaskIntoConstraints="NO" id="LPD-ZD-Rse">
-                        <rect key="frame" x="71" y="25" width="245" height="47"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="content label" text="内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="236" translatesAutoresizingMaskIntoConstraints="NO" id="LPD-ZD-Rse">
+                        <rect key="frame" x="57" y="29" width="255" height="52"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="nVP-7p-Nfp">
-                        <rect key="frame" x="100" y="80" width="56" height="22"/>
+                        <rect key="frame" x="81" y="83" width="56" height="22"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Niq-PX-XN7">
-                        <rect key="frame" x="71" y="80" width="26" height="22"/>
+                        <rect key="frame" x="52" y="84" width="26" height="22"/>
                         <state key="normal" image="zhibo_icon_zan.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <state key="selected" image="zhibo_icon_zan_press.png"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9a-zn-L4m">
-                        <rect key="frame" x="170" y="81" width="14" height="18"/>
+                        <rect key="frame" x="139" y="85" width="14" height="18"/>
                         <state key="normal" image="zhibo_icon_cai.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <state key="selected" image="zhibo_icon_cai_press.png"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JpN-Rm-FDd">
-                        <rect key="frame" x="252" y="77" width="30" height="24"/>
+                        <rect key="frame" x="254" y="80" width="30" height="24"/>
                         <state key="normal" image="zhibo_icon_jinggao.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzs-7N-SNC">
-                        <rect key="frame" x="280" y="77" width="30" height="24"/>
+                        <rect key="frame" x="282" y="80" width="30" height="24"/>
                         <state key="normal" image="zhibo_icon_huifu.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="29" translatesAutoresizingMaskIntoConstraints="NO" id="Al7-Ye-Qg5">
-                        <rect key="frame" x="192" y="80" width="29" height="22"/>
+                        <rect key="frame" x="161" y="83" width="29" height="22"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="标题 标题 标题 标题 " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="156" translatesAutoresizingMaskIntoConstraints="NO" id="rwk-SJ-L8s">
+                        <rect key="frame" x="57" y="9" width="180" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                 <outlet property="timeLabel" destination="Ta5-Le-gEx" id="obF-pY-0A8"/>
                 <outlet property="titleLabel" destination="rwk-SJ-L8s" id="O9x-1r-ubz"/>
             </connections>
-            <point key="canvasLocation" x="-580" y="25"/>
+            <point key="canvasLocation" x="-768" y="18"/>
         </tableViewCell>
     </objects>
     <resources>
