--- a/QiHuangDJ/VIewController/Classify/ClassifyViewController.xib
+++ b/QiHuangDJ/VIewController/Classify/ClassifyViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="1792" defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -13,7 +13,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" userLabel="superView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aam-uJ-HdW">
@@ -27,10 +27,10 @@
                     </connections>
                 </searchBar>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgi-RY-X8k" userLabel="直播view">
-                    <rect key="frame" x="0.0" y="44" width="320" height="153.5"/>
+                    <rect key="frame" x="0.0" y="44" width="320" height="153"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMk-6W-zo2">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="153.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -54,7 +54,7 @@
                             <size key="shadowOffset" width="0.0" height="0.0"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="hoH-00-aPX" secondAttribute="bottom" id="3Q6-R2-AJ2"/>
                         <constraint firstAttribute="trailing" secondItem="eMk-6W-zo2" secondAttribute="trailing" id="7GH-2U-9YF"/>
@@ -70,10 +70,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ey-e0-aPe" userLabel="点播view">
-                    <rect key="frame" x="0.0" y="197" width="320" height="153"/>
+                    <rect key="frame" x="0.0" y="197" width="320" height="154"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCY-eF-gp4">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -82,17 +82,17 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dota_tiao2.png" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-PA-9Vx">
-                            <rect key="frame" x="0.0" y="123" width="320" height="30"/>
+                            <rect key="frame" x="0.0" y="124" width="320" height="30"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点播" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDH-OK-6WS">
-                            <rect key="frame" x="8" y="123" width="304" height="30"/>
+                            <rect key="frame" x="8" y="124" width="304" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="fdY-PA-9Vx" firstAttribute="leading" secondItem="8ey-e0-aPe" secondAttribute="leading" id="0Z2-or-jUW"/>
                         <constraint firstAttribute="trailing" secondItem="OCY-eF-gp4" secondAttribute="trailing" id="0ue-1S-icg"/>
@@ -108,11 +108,12 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SlT-f8-ghG" userLabel="资讯view">
-                    <rect key="frame" x="0.0" y="350" width="320" height="153.5"/>
+                    <rect key="frame" x="0.0" y="351" width="320" height="153"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKP-49-Ek8">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="153.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
@@ -130,6 +131,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="c64-re-rZQ" secondAttribute="trailing" id="9ID-BS-Zkf"/>
                         <constraint firstAttribute="bottom" secondItem="hKP-49-Ek8" secondAttribute="bottom" id="B4o-zn-M3x"/>
@@ -167,8 +169,9 @@
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <nil key="simulatedBottomBarMetrics"/>
+            <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="-404" y="181"/>
+            <point key="canvasLocation" x="-283" y="135"/>
         </view>
     </objects>
     <resources>
