--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
@@ -102,13 +102,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="z0V-dK-OOz">
-                            <rect key="frame" x="262" y="11" width="56" height="21"/>
+                            <rect key="frame" x="227" y="11" width="56" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wIR-JB-eMb">
-                            <rect key="frame" x="233" y="11" width="26" height="22"/>
+                            <rect key="frame" x="198" y="11" width="26" height="22"/>
                             <state key="normal" image="zhibo_btn_zan.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -121,6 +121,16 @@
                             </state>
                             <connections>
                                 <action selector="discussMehod:" destination="-1" eventType="touchUpInside" id="sCW-jK-XUc"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UVc-aU-Ssg">
+                            <rect key="frame" x="283" y="11" width="16" height="22"/>
+                            <state key="normal" image="icon_shoucang.png">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="selected" image="icon_shoucang_press.png"/>
+                            <connections>
+                                <action selector="collectonMethod:" destination="-1" eventType="touchUpInside" id="sYV-QU-Shx"/>
                             </connections>
                         </button>
                     </subviews>
@@ -192,11 +202,13 @@
             </constraints>
             <nil key="simulatedBottomBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="-2461" y="266"/>
+            <point key="canvasLocation" x="-2608" y="289"/>
         </view>
     </objects>
     <resources>
         <image name="dota_tiao1.png" width="320" height="30"/>
+        <image name="icon_shoucang.png" width="16" height="15"/>
+        <image name="icon_shoucang_press.png" width="16" height="15"/>
         <image name="zhibo_btn_fanhui.png" width="9" height="16"/>
         <image name="zhibo_btn_huifu.png" width="19" height="17"/>
         <image name="zhibo_btn_zan.png" width="19" height="17"/>
